[amb_zivilschutz_adressen] add Task replaceStatus

--- a/amb_zivilschutz_adressen_export/build.gradle
+++ b/amb_zivilschutz_adressen_export/build.gradle
@@ -24,12 +24,6 @@ task stageAdressenZivilschutz(type: SqlExecutor){
     sqlFiles = [adressenDelete, adressenInsert]
 }
 
-task clearStaging(type: SqlExecutor){
-    database = [dbUriPub, dbUserPub, dbPwdPub]
-    sqlFiles = [adressenDelete]
-}
-
-
 task exportAdressenZivilschutz(type: CsvExport, dependsOn: stageAdressenZivilschutz){
     database = [dbUriPub, dbUserPub, dbPwdPub]
     schemaName = "amb_zivilschutz_adressen_staging_pub"
@@ -44,11 +38,22 @@ task exportAdressenZivilschutz(type: CsvExport, dependsOn: stageAdressenZivilsch
 
 }
 
+task replaceStatus(dependsOn: stageAdressenZivilschutz) {
+    description = "Ersetzt astatus zu status."
+    doLast {
+        ant.replace(
+        file: ${csvFileName},
+        token: 'astatus',
+        value: 'status',
+        encoding: 'UTF-8')
+    }
+}
+
 task deleteCsvFile(type: Delete){
     delete "${csvFileName}"
 }
 
-task uploadCsvFile (dependsOn: exportAdressenZivilschutz){
+task uploadCsvFile (dependsOn: replaceStatus){
     description = "Upload file to FTP server"
     doLast {
         ssh.settings {
