--- a/amb_notfalltreffpunkte_pub/build.gradle
+++ b/amb_notfalltreffpunkte_pub/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'ch.so.agi.gretl'
 defaultTasks 'transferAmbNotfalltreffpunkte'
 
 task transferAmbNotfalltreffpunkte(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('amb_notfalltreffpunkte_pub.sql', 'amb_notfalltreffpunkte_pub.notfalltreffpnkte_treffpunkt', true)
