--- a/agi_av_import_export/build.gradle
+++ b/agi_av_import_export/build.gradle
@@ -103,6 +103,7 @@ task unzipFiles(dependsOn: 'uploadFiles') {
     }
 }
 
+/*
 task createFederalFiles(type: Av2ch, dependsOn: 'unzipFiles') {
     inputFile = fileTree(pathToUnzipFolder) { include '*.itf' }
     outputDirectory = file(pathToFederalFolder)
@@ -138,15 +139,16 @@ task uploadDxfGeobauFiles(type: S3Upload, dependsOn: 'createDxfGeobauFiles') {
     sourceFiles = fileTree(pathToTempFolder) { include "*.zip" }
     acl = "public-read"
 }
+*/
 
-
-//task importData(type: Ili2pgReplace, dependsOn: 'unzipData') {
-task importData(type: Ili2pgReplace, dependsOn: 'uploadDxfGeobauFiles') {
+task importData(type: Ili2pgReplace, dependsOn: 'unzipData') {
+//task importData(type: Ili2pgReplace, dependsOn: 'uploadDxfGeobauFiles') {
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
     models = 'DM01AVSO24LV95'
     dbschema = 'agi_dm01avso24'
-    dataFile = fileTree(pathToUnzipFolder) { include '*.itf' }
-    dataset = dataFile.collect { it.getName().substring(0,4)}         
+    //dataFile = fileTree(pathToUnzipFolder) { include '*.itf' }
+    dataFile = fileTree(dir: pathToUnzipFolder, include: '*.itf')
+    dataset = fileTree(dir: pathToUnzipFolder, include: '*.itf').collect { it.getName().substring(0,4)}         
 
     disableValidation = true
 
