--- a/amb_zivilschutz_adressen_export/build.gradle
+++ b/amb_zivilschutz_adressen_export/build.gradle
@@ -32,14 +32,25 @@ task exportAdressenZivilschutz(type: CsvExport, dependsOn: stageAdressenZivilsch
     encoding = "UTF-8"
     valueSeparator = ';'
     valueDelimiter = null
-    attributes = ['lokalisationsname', 'hausnummer', 'plz', 'ortschaft', 'gemeinde', 'gwr_egid', 'gwr_edid', 'koord_ost', 'koord_nord', 'status', 'objektname', 'grundstuecknummer', 'grundbuchkreis']
+    attributes = ['lokalisationsname', 'hausnummer', 'plz', 'ortschaft', 'gemeinde', 'gwr_egid', 'gwr_edid', 'koord_ost', 'koord_nord', 'astatus', 'objektname', 'grundstuecknummer', 'grundbuchkreis']
+}
+
+task replaceStatus(dependsOn: exportAdressenZivilschutz) {
+    description = "Ersetzt astatus zu status."
+    doLast {
+        ant.replace(
+        file: csvFileName,
+        token: 'astatus',
+        value: 'status',
+        encoding: 'UTF-8')
+    }
 }
 
 task deleteCsvFile(type: Delete){
     delete "${csvFileName}"
 }
  
-task uploadCsvFile (dependsOn: exportAdressenZivilschutz){
+task uploadCsvFile (dependsOn: replaceStatus){
     description = "Upload file to FTP server"
     doLast {
         ssh.settings {
