--- a/arp_npl_export_ai/build.gradle
+++ b/arp_npl_export_ai/build.gradle
@@ -3,8 +3,8 @@ import ch.so.agi.gretl.tasks.*
 import java.nio.file.Paths
 import de.undercouch.gradle.tasks.download.Download
 
-//defaultTasks 'uploadMgdmLandUsePlans', 'uploadMgdmNoiseSensitivityLevels', 'uploadMgdmWaldabstandslinien'
-defaultTasks 'uploadMgdmNoiseSensitivityLevels'
+defaultTasks 'uploadMgdmLandUsePlans', 'uploadMgdmNoiseSensitivityLevels', 'uploadMgdmWaldabstandslinien'
+//defaultTasks 'uploadMgdmNoiseSensitivityLevels'
 
 def pathToTempFolder = System.getProperty("java.io.tmpdir")
 //File tmpFolder = new File("/tmp/gretl-share")
